Changed HttpClient to OkHttpClient in Azure VM (#11)